// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grabs subtasks 1`] = `
[
  {
    "endTime": null,
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": undefined,
    "rawStartTime": "9:00 ",
    "startTime": "2023-08-04T07:00:00.000Z",
    "text": "1",
  },
  {
    "endTime": null,
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": undefined,
    "rawStartTime": "10:00 ",
    "startTime": "2023-08-04T08:00:00.000Z",
    "text": "2",
  },
]
`;

exports[`parses bullet lists without checkboxes 1`] = `
[
  {
    "endTime": null,
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": undefined,
    "rawStartTime": "9:00 ",
    "startTime": "2023-08-04T07:00:00.000Z",
    "text": "1",
  },
  {
    "endTime": null,
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": undefined,
    "rawStartTime": "10:00 ",
    "startTime": "2023-08-04T08:00:00.000Z",
    "text": "2",
  },
]
`;

exports[`parses end time 1`] = `
[
  {
    "endTime": "2023-08-04T09:20:00.000Z",
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": "11:20 ",
    "rawStartTime": "10:00 ",
    "startTime": "2023-08-04T08:00:00.000Z",
    "text": "Wake up",
  },
]
`;

exports[`parses tasks with timestamps from lines 1`] = `
[
  {
    "endTime": null,
    "isCompleted": false,
    "matchIndex": -1,
    "rawEndTime": undefined,
    "rawStartTime": "10:00 ",
    "startTime": "2023-08-04T08:00:00.000Z",
    "text": "Wake up",
  },
]
`;
